--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
-# .env.example
+# Get your mistral API key
+MISTRAL_API_KEY=""
 
-# API Keys
-MISTRAL_API_KEY="your-mistral-api-key-here"
-
-# Models
+# Text model for regular chat
 MISTRAL_MODEL=mistral-medium
+
+# Vision model for screen analysis (separate variable!)
 MISTRAL_VISION_MODEL=pixtral-12b-latest
 
-# API URL
 MISTRAL_URL=https://api.mistral.ai/v1/chat/completions
 
-# Paths
-NOTES_FILE="~/Moose_Chamber/Mini_Player/mini/files/notes.txt"
-CHAT_HISTORY_DIR="/path/to/history"
-SCREENSHOTS_DIR="/path/to/screenshots"
+#Files path
+NOTES_FILE=files/notes.txt
+CHAT_HISTORY_DIR=files/history
+SCREENSHOTS_DIR=files/screenshots
+MEMORY_DIR=files/memory
+MUSIC_DIR=files/music
 
-# GitHub
-GITHUB_TOKEN="your-github-token-here"
+GITHUB_TOKEN=""
