STILL MESSING WITH FILE PATH: .env.example, config.py

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,1 @@
-# Get your mistral API key
-MISTRAL_API_KEY=""
-
-# Text model for regular chat
-MISTRAL_MODEL=mistral-medium
-
-# Vision model for screen analysis (separate variable!)
-MISTRAL_VISION_MODEL=pixtral-12b-latest
-
-MISTRAL_URL=https://api.mistral.ai/v1/chat/completions
-
-#Files path
-NOTES_FILE=files/notes.txt
-CHAT_HISTORY_DIR=files/history
-SCREENSHOTS_DIR=files/screenshots
-MEMORY_DIR=files/memory
-MUSIC_DIR=files/music
-
-GITHUB_TOKEN=""
+$'MISTRAL_API_KEY=\n\n# Models and API\nMISTRAL_MODEL=mistral-medium\nMISTRAL_VISION_MODEL=pixtral-large-latest\nMISTRAL_URL=https://api.mistral.ai/v1/chat/completions\n\n# Data locations (safe defaults)\nNOTES_FILE=./files/notes.txt\nCHAT_HISTORY_DIR=./files/history\nMEMORY_DIR=./files/memory\nMUSIC_DIR=./files/music\nSCREENSHOTS_DIR=./screenshots\n\n# Behavior\nCHAT_HISTORY_LENGTH=20\nAUTO_COMPRESS_THRESHOLD=40\nFACT_IMPORTANCE_THRESHOLD=0.6\nSCREENSHOT_QUALITY=75\nMAX_IMAGE_DIMENSION=1024\n\n# Logging\nDEBUG=False\nLOG_LEVEL=INFO\n'
