FIXED: .env.example structure

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,15 @@
-$'MISTRAL_API_KEY=\n\n# Models and API\nMISTRAL_MODEL=mistral-medium\nMISTRAL_VISION_MODEL=pixtral-large-latest\nMISTRAL_URL=https://api.mistral.ai/v1/chat/completions\n\n# Data locations (safe defaults)\nNOTES_FILE=./files/notes.txt\nCHAT_HISTORY_DIR=./files/history\nMEMORY_DIR=./files/memory\nMUSIC_DIR=./files/music\nSCREENSHOTS_DIR=./screenshots\n\n# Behavior\nCHAT_HISTORY_LENGTH=20\nAUTO_COMPRESS_THRESHOLD=40\nFACT_IMPORTANCE_THRESHOLD=0.6\nSCREENSHOT_QUALITY=75\nMAX_IMAGE_DIMENSION=1024\n\n# Logging\nDEBUG=False\nLOG_LEVEL=INFO\n'
+MISTRAL_API_KEY=
+MISTRAL_MODEL=mistral-medium
+MISTRAL_VISION_MODEL=pixtral-large-latest
+MISTRAL_URL=https://api.mistral.ai/v1/chat/completionsData 
+NOTES_FILE=./files/notes.txt
+CHAT_HISTORY_DIR=./files/history
+MUSIC_DIR=./files/music
+SCREENSHOTS_DIR=./screenshots
+CHAT_HISTORY_LENGTH=20
+AUTO_COMPRESS_THRESHOLD=40
+FACT_IMPORTANCE_THRESHOLD=0.6
+SCREENSHOT_QUALITY=75
+MAX_IMAGE_DIMENSION=1024
+DEBUG=False
+LOG_LEVEL=INFO
