--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 MISTRAL_API_KEY=
 MISTRAL_MODEL=mistral-medium
 MISTRAL_VISION_MODEL=pixtral-large-latest
-MISTRAL_URL=https://api.mistral.ai/v1/chat/completionsData 
+MISTRAL_URL=https://api.mistral.ai/v1/chat/completions
 NOTES_FILE=./files/notes.txt
 CHAT_HISTORY_DIR=./files/history
 MUSIC_DIR=./files/music
